# HarmonizationDiagnostics

./: LICENSE  LongitudinalReport_2025-12-15_16-16-16.html  README.md  Simulator.py  Simulator_Report_2025-12-04_16-05-26.html  diagnostic_report.txt  pyproject.toml  requirements.txt
DiagnoseHarmonization/: DiagnosticFunctions.py  DiagnosticReport.py  HarmonizationFunctions.py  LoggingTool.py  PlotDiagnosticResults.py  PowerAnalysis.py  Simulator.py
PlotResults/: PlotDiagnosticResults.py
tests/: test_CohensD.py  test_DiagnosticFunctions.py  test_DiagnosticReport.py  test_PcaCorr.py  test_PowerAnalysis.py  test_VarianceRatio.py  test_combat.py  test_mahalanobis.py  test_realdata_long.py  test_run_longitudinal.py  test_simulateddata_long.py
tests/longitudinal/: test_run.py
tests/onharmony/: onharmony.csv
