[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonization-diagnostics"
version = "0.9.1"
description = "Diagnostics and power analysis for harmonization efficacy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Jake Turnbull" }
]

dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scipy>=1.10",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "flake8"
]

[tool.setuptools.packages.find]
include = ["DiagnoseHarmonization*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
